каталог анимация с  задержкой

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
     </section>
     <section class="katalog">
-        <div class="container wow animate__animated animate__zoomInDown">
+        <div class="container wow animate__animated animate__zoomInDown" data-wow-offset="50">
             <h2 class="title title_thin">Каталог пульсометров</h2>
             <div class="katalog__tabs">
                 <ul class="nav nav-pills" id="pills-tab" role="tablist">
